<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
>

<TextView
android:id="@+id/TextView01"
android:gravity="right"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/textView"
android:background="@color/label_background"
android:textColor="@color/translucent_white"
/>

<TableRow
android:id="@+id/TableRow01"
android:layout_width="match_parent"
android:layout_height="wrap_content">
	<Button
android:text="@string/btnMove"
android:id="@+id/btnMove"
android:layout_width="0dip"
android:layout_weight="1"
android:layout_height="wrap_content">
</Button>
<Button
android:text="@string/btnEat"
android:id="@+id/btnEat"
android:layout_width="0dip"
android:layout_weight="1"
android:layout_height="wrap_content">
</Button>
<Button
android:text="@string/btnKick"
android:id="@+id/btnKick"
android:layout_width="0dip"
android:layout_weight="1"
android:layout_height="wrap_content">
</Button>
<Button
android:text="@string/btnRestart"
android:id="@+id/btnRestart"
android:layout_width="0dip"
android:layout_weight="1"
android:layout_height="wrap_content">
</Button>
</TableRow>

<NumberPicker
    android:id="@+id/speedPick"
    android:layout_width="150dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

</NumberPicker>

<TableRow
android:id="@+id/TableRow02"
android:layout_width="match_parent"
android:layout_height="wrap_content">
<TextView
android:id="@+id/textDistance"
android:gravity="left"
android:layout_width="0dip"
android:layout_weight="1"
android:layout_height="wrap_content"
android:text="@string/textDistance"
android:background="@color/label_background"
android:textColor="@color/translucent_white"
/>
<TextView
android:id="@+id/textDistanceResult"
android:gravity="left"
android:layout_width="0dip"
android:layout_weight="1"
android:layout_height="wrap_content"


/>
</TableRow>

<TableRow
android:id="@+id/TableRow03"
android:layout_width="match_parent"
android:layout_height="wrap_content">
	<TextView
android:id="@+id/textAmmo"
android:gravity="left"
android:layout_width="0dip"
android:layout_weight="1"
android:layout_height="wrap_content"
android:text="@string/textAmmo"
android:background="@color/label_background"
android:textColor="@color/translucent_white"
/>
	<TextView
android:id="@+id/textAmmoLeft"
android:gravity="left"
android:layout_width="0dip"
android:layout_weight="1"
android:layout_height="wrap_content"


/></TableRow>

<TableRow
android:id="@+id/TableRow04"
android:layout_width="match_parent"
android:layout_height="wrap_content">
<TextView
android:id="@+id/textWolf"
android:gravity="left"
android:layout_width="0dip"
android:layout_weight="1"
android:layout_height="wrap_content"
android:text="@string/textWolf"
android:background="@color/label_background"
android:textColor="@color/translucent_white"
/>
<TextView
android:id="@+id/textWolfResult"
android:gravity="left"
android:layout_width="0dip"
android:layout_weight="1"
android:layout_height="wrap_content"


/></TableRow>






</LinearLayout>
